# SPHv2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Frontend.h  Particle.h  Simulation.cpp  Simulation.h  SimulationParameters.cpp  SimulationParameters.h  main.cpp
src/graphics/: GraphicalFrontend.h  OpenGLFrontend.h
src/graphics/OpenGLFrontend/: Init.cpp  Renderer.cpp  Shader.h  ShaderProgram.h
src/math/: Line.h  Vec2.h
